fix among in dark mode

--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,10 @@ body.dark-mode {
 			&:before, &:after {
 				background: rgba(#fff, 0.2);
 			}
+
+			&.among {
+				color: inherit;
+			}
 		}
 
 		a.contact-method p {
